appset/manifests/busy-box.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox-rwx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: busybox-rwx
  template:
    metadata:
      labels:
        app: busybox-rwx
    spec:
      containers:
      - name: busybox
        image: busybox
        command: ["sh", "-c", "while true; do echo $(date) - $(hostname) >> /data/log.txt; sleep 5; done"]
        volumeMounts:
        - name: shared-storage
          mountPath: /data
      volumes:
      - name: shared-storage
        persistentVolumeClaim:
          claimName: rwx-pvc
