appset/manifests/parksmap-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: nationalparks
  labels:
    app: workshop
    app.kubernetes.io/part-of: workshop
    app.openshift.io/component: parksmap
    app.openshift.io/runtime: spring-boot
    component: parksmap
    deploymentConfig: parksmap
    role: frontend
  name: parksmap
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: workshop
      component: parksmap
      role: frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: workshop
        component: parksmap
        role: frontend
    spec:
      containers:
      - image: quay.io/openshiftroadshow/parksmap:latest
        imagePullPolicy: Always
        name: parksmap
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: workshop
    component: parksmap
    role: frontend
  name: parksmap
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8787-tcp
    port: 8787
    protocol: TCP
    targetPort: 8787
  selector:
    component: parksmap
  sessionAffinity: None
  type: ClusterIP

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: workshop
    app.kubernetes.io/part-of: workshop
    app.openshift.io/component: parksmap
    component: parksmap
    createdBy: parksmap-template
    role: frontend
  annotations:
    openshift.io/host.generated: 'true'
  name: parksmap
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: parksmap
    weight: 100
  wildcardPolicy: None
